fix(department): filter on mobile, department banner and breadcrumb

--- a/src/components/search/PLPFilters/plp-filters.scss
+++ b/src/components/search/PLPFilters/plp-filters.scss
@@ -14,8 +14,20 @@
 }
 
 .filter-modal__content {
-  width: calc(100vw - 100px);
+  width: calc(100vw - 50px);
+  height: calc(100vh - 65px);
   padding: 1.5rem;
+
+  @media (max-width: 375px) {
+    width: 100%;
+    height: 100%;
+  }
+
+  .close-button {
+    position: absolute;
+    top: 1.5%;
+    right: 4%;
+  }
 }
 
 [data-store-accordion] {
